Overflow in footer cell bug fix

--- a/less/components/consonant/cards/card-footer/card-footer.less
+++ b/less/components/consonant/cards/card-footer/card-footer.less
@@ -46,6 +46,7 @@
     max-width: 100%;
     flex-basis: 0;
     flex-grow: 1;
+    overflow: hidden;
 
     &:empty {
         display: none;
